tests/ui/lifetimes/issue-69314.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/issue-69314.rs:18:20
   |
LL |     async fn f2(m: Msg) {}
   |                    ^^^ expected lifetime parameter
   |
help: indicate the anonymous lifetime
   |
LL |     async fn f2(m: Msg<'_>) {}
   |                       ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0726`.
